--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,21 @@
     },
     {
       "name": "Julian Hyatt",
-      "email": "info@julianzimmermann.dev"
+      "email": "dev@jzit.de"
     }
   ],
   "require": {
     "php": ">=8.0",
+    "fond-of-oryx/company-business-unit-search-rest-api-extension": "^1.0.0",
     "spryker/company-user": "^2.0.0",
     "spryker/company-business-unit": "^2.0.0",
+    "spryker/glue-application": "^1.0.0",
     "spryker/glossary-storage": "^1.5.0"
   },
   "require-dev": {
-    "fond-of-codeception/spryker": "^2.0.0",
-    "spryker/code-sniffer": "^0.12"
+    "fond-of-codeception/spryker": "*",
+    "spryker/code-sniffer": "*",
+    "spryker-sdk/phpstan-spryker": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -32,11 +35,11 @@
   "autoload-dev": {
     "psr-4": {
       "FondOfOryx\\": "tests/FondOfOryx/",
-      "Generated\\": "src/Generated/"
+      "Generated\\": "src/Generated/",
+      "Orm\\": "src/Orm/"
     }
   },
   "config": {
-    "sort-packages": true,
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
